# cpp-advanced-training

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  cleanup  conanfile.txt
.github/workflows/: main.yml
.travis-ci/linux-macos/: build.sh  install.sh
.travis-ci/windows/: before_script.sh  build.sh  install.sh
Curiosity/: algebra.cpp  algebraT.cpp  cpp17-pmr-introspection.cpp  prime_number_concept.cpp
Solutions/: FindRun-WIP.cpp  FindRun.cpp  IntNan--unittest.cpp  parallel_word_count.hpp  parallel_word_count_bench--benchmark.cpp  parallel_word_count_test--unittest.cpp  producer-consumer--unittest.cpp  producer-consumer-ASSERT_DURATION_LE.hpp  producer-consumer-queue.hpp  thread_pool.cpp
extras/: alignas.cpp  format-dynamic_translate.cpp  unevaluated_lambda.cxx
extras/C++20/: thread-jthread.cpp  unevaluated_lambda.cxx
extras/non-conforming/: README.md  computed-goto--benchmark.cpp  elvis_operator.cpp  unnamed_structure_and_union_fields.cpp
include/: TrackNew.hpp  colorize.hpp  type.hpp  unsupported_features.hpp
src/: StaticInitOrderFiasco--companion.cpp  StaticInitOrderFiasco-compiletime-solution--companion.cpp  StaticInitOrderFiasco-compiletime-solution.cpp  StaticInitOrderFiasco-lazy-solution--companion.cpp  StaticInitOrderFiasco-lazy-solution.cpp  StaticInitOrderFiasco.cpp  Template.cpp  bind_front-WIP.cpp  check_cpp_version.cpp  check_support__full_display.cpp  check_support__has_attribute.cpp  check_support__has_include.cpp  colorize--unittest.cpp  comma_operator.cpp  consteval_constinit.cpp  constexpr-consteval-constinit-WIP.cpp  constexpr_STL_algorithm.cpp  constexpr_STL_vector.cpp  constexpr_allocation.cpp  constexpr_allocation_and_more.cpp  constinit_focus.cpp  cpp20-demo-test.cpp  designated_initialization.cpp  folding.hpp  integer_compare.cpp  lambda_capture_this-will_fail.cpp  lambda_generics.cpp  lambda_generics_subtleties.cpp  lambda_parameter_pack_capture.cpp  lambda_variadic_capture.cpp  less_typename.cpp  new_stl_erase_if.cpp  new_stl_maths.cpp  range-based_for_init.cpp  source_location.cpp  span.cpp  std_constexpr_STL.cpp  type--unittest.cpp
src/analysis/: dangling.cpp
src/chrono/: chrono-demo-WIP.cpp
src/concepts/: ConceptTemplate.cpp  best_swap-WIP.cpp  best_swap.cpp  case_disjunction-WIP.cpp  case_disjunction.cpp  case_disjunction2-WIP.cpp  case_disjunction2.cpp  classic_sort1.cpp  classic_sort2.cxx  compare_with_traits.cpp  concept_lib-WIP.cpp  concept_setup.cpp  concept_traps-WIP.cxx  concept_traps1.cxx  concept_traps2.cxx  concept_usage_showcase.cpp  constraint_festival.cpp  first_concept.cpp  illegal_constraints.cxx  legal_constraints.cpp  logger-factory.cpp  multi-arg-concept.cpp  non-type-template-parameter-usage-WIP.cpp  return-type-requirement_order.cpp  shell_sort-WIP.cpp  shell_sort.cpp  total_ordered-not-IEEE754-2008-compliant.cxx
src/concurrency/: async_too_slow.cpp  atomic_ref.cpp  atomic_shared_ptr_list-WIP.cpp  barrier.cpp  combinatory_result.cpp  concurrent_safe_mutex_access_bad_way.cpp  concurrent_safe_mutex_access_good_way.cpp  concurrent_unsafe_access.cxx  first_jthread.cpp  first_thread.cpp  first_thread_life.cpp  future.cpp  hazardous_atomic_operation.cpp  incrementation--benchmark.cpp  interruptible-jthread.cpp  latch.cpp  notify_condition_variable.cpp  osyncstream.cpp  pingpong--benchmark.cpp  promise.cpp  promise_exception.cpp  semaphore.cpp  shared_future.cpp  thread-jthread.cpp  thread_local.cpp
src/coroutines/: CoroutineTemplate.cpp  ProcessStream.cpp  async--server.cpp  async--server.hpp  async--synccout.hpp  async--thread_pool.cpp  async--thread_pool.hpp  async--unittest.cpp  async_server.cpp  awaiters.cpp  co_await_path.cpp  co_await_principle-WIP.cpp  composed_iterator.cpp  concurrency--benchmark.cpp  coroutine_trait.cpp  duplicated_handle_error-will_fail.cpp  future_coroutine_trait.cpp  generator.cpp  hello_world.cpp  inlined-coroutines.cpp  lexer-parser-WIP.cpp  lexer-parser.cpp  massive-usage.cpp  move_thread_coroutine.cpp
src/deprecations/: volatile.cpp
src/format/: advanced-custom-formatter.cpp  conversion--benchmark.cpp  format--unittest.cpp  format-error--unittest.cpp  format-other-functions.cpp  localization--unittest.cpp  minimal-custom-formatter.cpp  simple-problem-c.cpp  simple-problem-format.cpp  simple-problem-sstream.cpp  trivial-custom-formatter.cpp
src/meta-programming/: logical_operator.cpp  min_element_IterT.cpp  min_element_IterT_enable_if.cpp  min_element_IterT_failure.cxx  min_element_IterT_with_NaN.cpp  min_element_T.cpp  min_element_auto.cpp  min_element_auto_WIP.cpp  min_element_auto_concepts.cpp  min_element_concepts.cpp  min_element_concepts_light.cpp  min_element_double.cpp  min_element_int.cpp  non-type-template-parameter.cpp  primer.cpp  print_triviality_cpp11.cpp  print_triviality_cpp17.cpp  (+4 more)
src/modules/: CMakeLists.txt  TODO.md  get_cpp_time.cpp  greetings2.cpp  hello1.cpp  helloworld3.cpp  helloworld4.cpp  main1.cpp  main2.cpp  main3.cpp  main4.cpp
src/modules/anatomy/: anatomy.cpp  anatomy.module.ixx  anatomy.module.mxx  reexported.ixx  useful.module.ixx
src/modules/conflicting_modules/: main_with_std_import.cpp  module_with_std_import.cpp
src/modules/dual_std_import/: module_with_std_import.cpp  second_std_import.cpp
src/modules/helloworld/: helloworld.cpp  helloworld.ixx
src/modules/helloworld2/: helloworld2.cpp  helloworld2.ixx
src/modules/modular_helloworld/: helloworld_module.cpp  modular_helloworld.cpp
src/modules/modular_helloworld2/: helloworld_module2.cpp  modular_helloworld2.cpp
src/modules/no_macro_effect/: no_macro_effect.cpp  preproc_citadel.ixx
src/modules/ownership/: module1.ixx  module2.ixx  use_multiple_foo.cpp  use_vx_foo.cpp  v1_module.cpp  v2_module.cpp
src/modules/pimpl/: pimpled.ixx  pimpled_module.cpp  use_pimpled.cpp
src/modules/std_dual_import/: module_std_import.ixx
src/modules/std_import/: std_import.cpp
src/modules/template_import/: other_module.cpp  other_module.ixx  template_import.cpp  template_module.cpp  template_module.ixx
tools/: manage_test_crash.c
(+56 files in other folders)
